--- a/src/views/pages/events/event/event.ejs
+++ b/src/views/pages/events/event/event.ejs
@@ -13,28 +13,41 @@
         <div class="row event-info-row">
             <!-- EVENT INFO -->
             <div class="col-md-8">
-                <div class="section-row images">
-                    <img src="<%= event.images[0] %>" alt="">
+                <div class="slider-container">
+                    <% for(let img of event.images) { %>
+                        <% if(img) { %><img src="<%= img %>" alt=""><% } %>
+                    <% } %>
                 </div>
 
                 <div class="section-row">
                     <div class="section-title">
-                        <h2 class="title">Our story</h2>
+                        <h2 class="title"><%= event.title %></h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, mea ad idque detraxit, cu soleat graecis invenire eam. Vidisse suscipit liberavisse has ex, vocibus patrioque vim et, sed ex tation reprehendunt. Mollis volumus no vix, ut qui clita habemus, ipsum senserit est et. Ut has soluta epicurei mediocrem, nibh nostrum his cu, sea clita electram reformidans an.</p>
-                    <blockquote class="blockquote">
+
+                    <p><%= event.description %></p>
+
+                    <div class="date-place">
+                        <div class="date"><%= moment(event.start).format("Do [de] MMMM [de] YYYY, h[h]") %></div>
+                        <div class="place">
+                            <%= org.name %> | 
+                            <%= org.address.street ? (org.address.street + ', ') : "" %>
+                            <%= org.address.number ? (org.address.number + ', ') : "" %>
+                            <%= org.address.city %></div>
+                    </div>
+
+                    <!-- <blockquote class="blockquote">
                         <p>Ei prima graecis consulatu vix, per cu corpora qualisque voluptaria. Bonorum moderatius in per, ius cu albucius voluptatum. Ne ius torquatos dissentiunt. Brute illum utroque eu quo. Cu tota mediocritatem vis, aliquip cotidieque eu ius, cu lorem suscipit eleifend sit.</p>
                         <footer class="blockquote-footer">John Doe</footer>
-                    </blockquote>
+                    </blockquote> -->
                 </div>
-
+<!-- 
                 <div class="section-row">
                     <div class="section-title">
                         <h2 class="title">Our Vision</h2>
                     </div>
                     <p>Est in saepe accusam luptatum. Purto deleniti philosophia eum ea, impetus copiosae id mel. Vis at ignota delenit democritum, te summo tamquam delicata pro. Utinam concludaturque et vim, mei ullum intellegam ei. Eam te illum nostrud, suas sonet corrumpit ea per. Ut sea regione posidonium. Pertinax gubergren ne qui, eos an harum mundi quaestio.</p>
                     <p>Nihil persius id est, iisque tincidunt abhorreant no duo. Eripuit placerat mnesarchum ius at, ei pro laoreet invenire persecuti, per magna tibique scriptorem an. Aeque oportere incorrupte ius ea, utroqueuscipit.</p>
-                </div>
+                </div> -->
             </div><!-- /EVENT INFO -->
 
 
@@ -44,5 +57,8 @@
     </div>
         
     <footer id="footer"><% include ../../../partials/footer %></footer>
+
+    <!-- Page specific scripts -->
+    <script src="/js/event.jquery.js"></script>
 </body>
 </html>
