--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,15 +8,18 @@
 
 <!-- Google font -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <!-- Font Awesome Icon -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
+<!-- Slich image slider and carousel - CSS-->
+<link rel="stylesheet" type="text/css" href="/css/slick.css"/>
+<link rel="stylesheet" type="text/css" href="/css/slick-theme.css"/>
 
-
-<!-- Custom stlylesheet -->
+<!-- Custom global stlylesheet -->
 <link type="text/css" rel="stylesheet" href="/css/global.css" />
 
 <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
