--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,7 @@
 html {
   width: 100vw !important;
   background-color: #f7f7f7;
+  overflow-y: auto;
 }
 
 body {
@@ -96,7 +97,7 @@ blockquote.blockquote .blockquote-footer {
 
 @media only screen and (max-width: 719px) {
   .main-container {
-    margin: 20px 40px 20px;
+    margin: 20px 20px 20px;
   }
 }
 
@@ -635,7 +636,7 @@ nav {
 }
 
 .footer-logo .logo img {
-  max-width: 320px;
+  max-width: 300px;
 }
 
 .footer-bottom {
