--- a/src/views/pages/events/events.ejs
+++ b/src/views/pages/events/events.ejs
@@ -27,7 +27,7 @@
 
         <div class="page-header">
             <div id="page-header-bg" data-stellar-background-ratio="0.5">
-                <h1 class="text-uppercase" id="title-city-name"><%= activeCity %></h1>
+                <h1 class="text-uppercase" id="title-city-name"><%= activeCity || 'Próximos eventos' %></h1>
             </div>
         </div>
 
