--- a/src/views/pages/events/partial_events.ejs
+++ b/src/views/pages/events/partial_events.ejs
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="row mb-3 event-row-list">
+        <div class="slider-container">
             <% events[monthDate].forEach(function(ev, index) { %>
                 <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3 mb-3">
                     <div class="event ml-2 mr-2">
@@ -39,5 +39,6 @@
                 </div>
             <% }) %>
         </div>
+
     <% } %>
 <% }) %>
