--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -145,9 +145,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<!-- Slich image slider and carousel - JS-->
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-
-<script src="/js/main.jquery.js"></script>
-<script src="/js/aside.jquery.js"></script>
+<script type="text/javascript" src="/js/main.jquery.js"></script>
+<script type="text/javascript" src="/js/aside.jquery.js"></script>
