hide aside, prd/dev env

--- a/src/views/partials/aside.ejs
+++ b/src/views/partials/aside.ejs
@@ -18,11 +18,11 @@
 <!-- /cities widget -->
     
 <!-- ad widget-->
-<div class="aside-widget text-center ad-widget">
+<!-- <div class="aside-widget text-center ad-widget">
     <a href="/anunciar" style="display: inline-block;margin: auto;">
         <img class="img-responsive t-300-250" src="/img/ad/anuncie-aqui-300-250.png" alt="">
     </a>
-</div>
+</div> -->
 <!-- /ad widget -->
 
 <!-- social widget -->
