cleaning, backup cron on gcs, install google analytics

--- a/src/views/pages/events/event-details.ejs
+++ b/src/views/pages/events/event-details.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <% include ../../../partials/head %>
+    <% include ../../partials/head %>
 
     <!-- Slich image slider and carousel - CSS-->
     <link rel="stylesheet" type="text/css" href="/css/slick.css"/>
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/event.css">
 </head>
 <body>
-    <header id="header"><% include ../../../partials/header %></header>
+    <header id="header"><% include ../../partials/header %></header>
     
     <div class="main-container">
         <div class="row event-info-row">
@@ -57,11 +57,11 @@
 
 
             <!-- ASIDE -->
-            <div class="col-md-4 aside-col"><% include ../../../partials/aside.ejs %></div>
+            <div class="col-md-4 aside-col"><% include ../../partials/aside.ejs %></div>
         </div>
     </div>
         
-    <footer id="footer"><% include ../../../partials/footer %></footer>
+    <footer id="footer"><% include ../../partials/footer %></footer>
 
     <!-- Slich image slider and carousel - JS-->
     <script type="text/javascript" src="/slick/slick.min.js"></script>
