--- a/src/views/pages/events/events-list.ejs
+++ b/src/views/pages/events/events-list.ejs
@@ -16,7 +16,7 @@
         <header id="header"><% include ../../partials/header %></header>
 
         <!-- DESTAQUE -->
-        <!-- <%# if (featured && featured.length > 0) { include ./partial_featured.ejs } %> -->
+        <!-- <%# if (featured && featured.length > 0) { include ./part-events-featured.ejs } %> -->
 
         <!-- MAIN ADVERTISE-->
         <!-- <div class="section">
@@ -40,7 +40,7 @@
         <div class="main-container">
             <div class="row">
                 <!-- EVENTS -->
-                <div class="col-md-8 events-main-col"><% include ./partial_events.ejs %></div>
+                <div class="col-md-8 events-main-col"><% include ./part-events-list.ejs %></div>
 
                 <!-- ASIDE -->
                 <div class="col-md-4 aside-col"><% include ../../partials/aside.ejs %></div>
