--- a/public/css/aside.css
+++ b/public/css/aside.css
@@ -10,11 +10,6 @@
                                                
 =====================================================================================*/
 
-.aside-widget {
-  margin-bottom: 30px;
-}
-
-
 /*----------------------------*\
 	global to all aside items
 \*----------------------------*/
@@ -23,49 +18,45 @@
 }
 .aside-widget .title h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   color: rgba(0,0,0,0.7);
   font-weight: 600;
+  margin-bottom: 0;
 } 
 
 
 /*----------------------------*\
 	cities widget
 \*----------------------------*/
-.cities-widget ul li {
+.filters-widget ul {
+  margin-left: 16px;
+}
+.filters-widget ul li {
   padding: 8px 0px 8px 16px;
   border-bottom: 1px solid #e8eaed;
   border-radius: 4px;
+  cursor: pointer;
+}
+.filters-widget ul li label {
+  font-size: 14px;
+  cursor: pointer;
+}
+.filters-widget ul li input {
+  margin-top: 6px;
+  cursor: pointer;
 }
 
-.cities-widget ul li.active, .cities-widget ul li:hover {
-  background-color: rgba(0,0,0,0.05);
-}
-
-.cities-widget ul li.active a {
-  color: rgba(0, 60, 0, 0.5);
-  font-weight: 700;
-}
-
-.cities-widget ul li a {
-  display: block;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
-.cities-widget ul li a span {
-  float: right;
-  font-size: 12px;
-  color: #97989b;
-  margin-left: 15px;
-}
-
-.footer-widget .cities-widget ul li {
+.footer-widget .filters-widget ul li {
   border-color: #323335;
 }
 
 img.t-300-250 {
   width: 100%;
+}
+
+button.update-filters {
+  margin: 12px 8px 0;
+  width: calc(100% - 16px);
 }
 
 
