--- a/src/views/pages/events/events-list.ejs
+++ b/src/views/pages/events/events-list.ejs
@@ -24,7 +24,10 @@
         <div class="main-container">
             <div class="row">
                 <!-- EVENTS -->
-                <div class="col-md-8 events-main-col"><% include ./part-events-list.ejs %></div>
+                <div class="col-md-8 events-main-col">
+                    <% include ./part-events-list.ejs %>
+                    <br><br><br><br><br><br><br><br><br>
+                </div>
 
                 <!-- ASIDE -->
                 <div class="col-md-4 aside-col"><% include ../../partials/aside.ejs %></div>
