--- a/public/css/events.css
+++ b/public/css/events.css
@@ -116,6 +116,7 @@
 .event-img {
   display: block;
   height: 208px;
+  height: 208px;
   overflow: hidden;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
@@ -125,6 +126,7 @@
 }
 .event-img > img {
   width: 100%;
+  height: 100% !important;
   -webkit-transition: 1.6s -webkit-transform;
   transition: 1.6s -webkit-transform;
   transition: 1.6s transform;
