--- a/src/views/pages/events/events-list.ejs
+++ b/src/views/pages/events/events-list.ejs
@@ -17,7 +17,7 @@
 
         <div class="page-header">
             <div id="page-header-bg" data-stellar-background-ratio="0.5">
-                <h1 class="text-uppercase" id="title-city-name"><%= activeCity || 'Próximos eventos' %></h1>
+                <h1 class="text-uppercase" id="title-city-name"><%= activeCity || 'eventos' %></h1>
             </div>
         </div>
 
@@ -31,6 +31,7 @@
                 <!-- ASIDE -->
                 <div class="col-md-4 aside-col"><% include ../../partials/aside.ejs %></div>
             </div>
+
         </div>
 
         <footer id="footer"><% include ../../partials/footer %></footer>
