--- a/src/views/pages/events/part-events-list.ejs
+++ b/src/views/pages/events/part-events-list.ejs
@@ -25,12 +25,12 @@
                             <a class="event-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                             <div class="event-body">
                                 <div class="event-org-city">
-                                    <%= event.org %>
-                                    <span class="city"><%= event.city %></span>
+                                    <%= event.orgName %>
+                                    <span class="city"><%= event.cityName %></span>
                                 </div>
                                 <h3 class="event-title"><%= event.title %></h3>
                                 <ul class="event-tags">
-                                    <% event.tags.forEach((tag) => { %>
+                                    <% event.tags.slice(0,5).forEach((tag) => { %>
                                         <li><%= tags.find(tag_ => tag_.code === tag).title %></li>
                                     <% }) %>
                                 </ul>
