--- a/src/views/partials/aside.ejs
+++ b/src/views/partials/aside.ejs
@@ -1,7 +1,7 @@
-<!-- cities widget -->
+<!-- cities widget - Not mobile -->
 <div class="aside-widget">
-    <div class="row filters-widget">
-        <div class="col-12 col-sm-6 col-md-12 col-lg-12 mb-4">
+    <div class="row filters-widget d-none d-sm-block">
+        <div class="col-12 col-sm-6 col-md-12 col-lg-12 mb-2">
             <div class="title"><h2 class="noselect">Cidades</h2></div>
             <ul><% cities.forEach((city, index) => { %>
                 <li>
@@ -10,21 +10,20 @@
                 </li>
             <% }); %></ul>
         </div>
-
         <div class="col-12 col-sm-6 col-md-12 col-lg-12">
             <div class="title"><h2 class="noselect">Tags</h2></div>
-            <ul><% tags.forEach((tag, index) => { %>
+            <ul><% tags.filter(tag_ => tag_.status).forEach((tag, index) => { %>
                 <li>
                     <input type="checkbox" class="filter-checkbox form-check-input" value="<%= tag.code %>">
                     <label class="form-check-label noselect"><%= tag.title %></label>
                 </li>
             <% }); %></ul>
         </div>
+        <button type="button" class="btn btn-info btn-sm update-filters text-uppercase">Filtrar</button>
     </div>
-    <button type="button" class="btn btn-info btn-sm update-filters text-uppercase">Filtrar</button>
 </div>
 <!-- /cities widget -->
-    
+
 <!-- ad widget-->
 <!-- <div class="aside-widget text-center ad-widget">
     <a href="/anunciar" style="display: inline-block;margin: auto;">
