--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <!-- views/partials/head.ejs -->
 
+<% if(env !== 'local') { %>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137517843-1"></script>
 <script>
@@ -9,6 +10,7 @@
 
   gtag('config', 'UA-137517843-1');
 </script>
+<% } %>
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
