--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -25,12 +25,12 @@
  <div id="nav-bottom" class="">
     <nav class="navbar fixed-bottom bottom-nav d-block d-sm-none">
         <div class="nav-bottom-menu pt-1">
-            <div class="btn-filter text-center py-2 px-4">
+            <div class="btn-filter text-center px-4">
                 <i class="fa fa-filter" aria-hidden="true"></i>
                 <span class="icon-label d-flex">Filtrar</span>
             </div>
-            <div class="divider mt-1"></div>
-            <div class="btn-menu text-center py-2 px-4">
+            <div class="divider"></div>
+            <div class="btn-menu text-center px-4">
                 <i class="fa fa-bars" aria-hidden="true"></i>
                 <span class="icon-label d-flex">Menu</span>
             </div>
@@ -38,4 +38,20 @@
     </nav>
 
     <div class="bottom-menu-container"></div>
+</div>
+
+<div class="d-none menu-items">
+    <div class="bottom-menu-logo-container">
+        <a href="/"><div class="bottom-menu-logo"></div></a>
+    </div>
+    <div class="list-group list-group-flush">
+        <!-- <a href="#" class="list-group-item list-group-item-action active">Cras justo odio</a> -->
+        <!-- <a href="#" class="list-group-item list-group-item-action">Sul BA Guia</a> -->
+        <a href="/eventos" class="list-group-item list-group-item-action">Eventos</a>
+        <a href="/anuncie" class="list-group-item list-group-item-action">Anunciar aqui</a>
+        <a href="/blog" class="list-group-item list-group-item-action">Blog</a>
+        <a href="/login" class="list-group-item list-group-item-action">Entrar</a>
+        <a href="/cadastro" class="list-group-item list-group-item-action">Criar conta</a>
+        <!-- <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a> -->
+    </div>
 </div>
