Create STG project

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/head.ejs -->
 
-<% if(env !== 'local') { %>
+<% if(env === 'production') { %>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137517843-1"></script>
 <script>
